# granite.build

./: .coveragerc  .dockerignore  .gitignore  .gitleaksignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  Dockerfile.monitoring  LICENSE  Makefile  NOTICE  README.md  SECURITY.md  api_client.py.patch  connector.py.patch  implementation-notes-0601.html  pyproject.toml  webhooks-user-guide.mdx
.claude/commands/: create-issues.md  pr-post-merge.md  pr.md  start-issue.md
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  skypilot-pr.yml  slurm-integration.yml  test-comment.yml
assets/templates/DiGiT_Skypilot/: README.md
assets/templates/DiGiT_Skypilot_PVC/: README.md
assets/templates/Sage_Skypilot/: README.md
assets/templates/Sage_Skypilot_PVC/: README.md  build.yaml
configurations/: README.md
configurations/spaces/local/: space.yaml
docs/: README.md  arch-diagram.md  bring_your_own_image.md  build-yaml-hf-push.md  demos.md  environment-classes.md  environment-yaml-config.md  gbtest.md  getting-started.md  multi-provider-authentication.md  rabbitmq-event-notifications-developer-guide.md  rabbitmq-event-notifications.md  step-retry-configuration.md  target-reuse.md  webhooks-developer-guide.md  ~$GraniteBuild.odp
docs/architecture/: arch-diagram.md
docs/compliance/: dependency-licenses.md
docs/features/: build-retry.md  gbtest.md  lineage.md  retry.md  step-retry-configuration.md
docs/operators/: environment-yaml-config.md  local-secrets-manager.md  runpod-orchestrator.md  skypilot-local-infrastructure.md  step-resolution.md  troubleshooting.md
docs/operators/setup/: README.md  create-hf-secret.sh  setup-skypilot.sh  skypilot-kubernetes-setup.md  skypilot-setup-config.yaml  skypilot-setup.env.template
docs/plans/: 2026-05-20-webhook-push-notifications-design.md  2026-05-20-webhook-push-notifications-plan.md  2026-05-21-dashboard-webhook-integration-design.md  2026-05-21-dashboard-webhook-integration.md
docs/setup/: create-ghe-secret.sh  skypilot-kubernetes-setup.md
docs/skypilot/: local-infrastructure-setup.md
docs/steps/: README.md
docs/superpowers/plans/: 2026-05-06-hfpull-hfpush-lsf.md
docs/superpowers/specs/: 2026-05-06-hfpull-hfpush-lsf-design.md
docs/templates/: README.md
docs/users/: build-yaml-reference.md  cli-reference.md  faq.md  hf-push.md
examples/: README.md
examples/minimal-build/: README.md  build.yaml
k8s/: README.md  dep-build-runner.yaml
k8s/chart/: Chart.yaml  README.md  values-dev.yaml  values-prod.yaml  values-staging.yaml  values.yaml
k8s/chart/templates/: configmap.yaml  dep-build-watcher.yaml  dep-rest-server.yaml  ingress.yaml  pvc-afm-read-only.yaml  pvc-afm-read-write.yaml  pvc-buildws.yaml  pvc-prws.yaml  role-orchestrator.yaml  role.yaml  rolebinding-orchestrator.yaml  rolebinding.yaml  route.yaml  secret.yaml  svc-acc-orchestrator.yaml  svc-acc.yaml  svc-rest-server.yaml
k8s/prod/: dep-gbserver-rest-server.yaml
recipes/granite4-350m/lsf/: README.md
samples/assetstores/cos/: store.yaml
samples/assetstores/lakehouse/: store.yaml
samples/assetstores/local/: store.yaml
samples/config/: build-watcher-config.yaml  create-dev-spaces.yaml  create-prod-spaces.yaml  create-staging-spaces.yaml
samples/data/dg-tune-eval/: dg.jsonl  eval.jsonl
samples/environments/local/: environment.yaml
samples/environments/standalone/: environment.yaml
samples/environments/vela/: environment.yaml
samples/spaces/env-secrets-example/: README.md  space.yaml
samples/spaces/hybrid-secrets-example/: README.md  space.yaml
samples/standalone/: README.md
samples/standalone/inference/: build.yaml
samples/standalone/lora-finetune/: build.yaml
samples/standalone/standalone-quickstart/: build.yaml
samples/steps/cat/: step.yaml
samples/steps/copy/: step.yaml
samples/steps/echo/: step.yaml
samples/steps/hellouniverse/: step.yaml
samples/steps/helloworld/: step.yaml
samples/steps/tuning/: tuning.yaml
samples/templates/local_hello_world/: build.yaml
samples/templates/local_multi_stage/: build.yaml
samples/tests/digit-tuning-fmeval/: build.yaml
samples/tests/hello-gb-vela/: build.yaml
samples/tests/local_hello_world_full/: build.yaml
scripts/: compact-build-archive.py  create-release-branch.sh  demo-slurm.sh  demo-standalone.sh  gen-mermaid.sh  get-runner-logs.sh  limited-format.sh  limited-typecheck.sh  rm-test-tables.sh  rm_hf_repos.py  tag-main.sh  test-event-publish-e2e.py  test-webhook-e2e.py
scripts/minio/: setup-minio.sh  teardown-minio.sh
scripts/slurm/: docker-compose.gpu.yml  docker-compose.yml  gres.conf  setup-slurm.sh  slurm.conf  slurm.conf.template  slurmdbd.conf  teardown-slurm.sh
space/: space.yaml
space/builds/bcb-server/: build.yaml  parameters.yaml
space/builds/bfcl-eval/: build.yaml  parameters.yaml
space/builds/code-eval/: build.yaml
space/builds/export-results/: build.yaml  parameters.yaml
space/builds/full-eval/: build.yaml
space/builds/general-eval/: build.yaml
space/builds/math-eval/: build.yaml
space/builds/multilingual-eval/: build.yaml  parameters.yaml
space/builds/safety-eval/: build.yaml
spaces/shared/: space.yaml
src/gbcli/: __main__.py  cli.py
src/gbcommon/uri/: cos.py  (+9 more)
src/gbserver/: __init__.py  __main__.py  cli.py
src/llmbsub/: CLAUDE.md  __main__.py  llmbsub_cli.py
test/: conftest.py
test-data/standalone-environments/: space.yaml
test/gbserver_test/: constants.py  test_utils.py
test/integration/: test_yaml_runner.py
test/lib/: constants.py  fixture_loader.py  mock_env.py  test_utils.py
test/libgbtest/: constants.py  mode.py  utils.py
test/logging_test/: README.md  log-generator.yaml
test/sidecar_test/: test_multi_sidecar_cmdmon_delayed_pytest.py  test_multi_sidecar_cmdmon_pytest.py  test_multi_sidecar_pytest.py  test_sidecar_cmdmon_delayed_pytest.py  test_sidecar_cmdmon_pytest.py  test_sidecar_pytest.py  test_sidecar_tuning_pytest.py
(+904 files in other folders)
